# smaill_cppTgBot

./: .gitignore  CMakeLists.txt  README.md
inc/: config.hpp
src/: main.cpp
